src/z80asm/z80asm2/t/40-syntax/expected/dq_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/dq_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/40-syntax/input/dq_01.asm...
t/40-syntax/input/dq_01.asm:1:3: error: Expression expected
    dq
      ^
t/40-syntax/input/dq_01.asm:2:1: error: Unterminated expression after "dq"
    dq ,
    ^
t/40-syntax/input/dq_01.asm:4:16: error: Expression expected
    dq 1,2,3,1+2*3,
                   ^
t/40-syntax/input/dq_01.asm:5:16: error: Unexpected token: "@"
    dq 1,2,3,1+2*3 @
                   ^
Program: dq_01
    Modules:
        Module: dq_01 (current)
            Sections:
                Section: "" (current)
                    Size: 0
    Statements:
        OpcodeStmt
            Location: t/40-syntax/input/dq_01.asm:3:1
            Address: 0
            Bytes: 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
            Patches:
                Patch
                    Location: t/40-syntax/input/dq_01.asm:3:4
                    Value type: Unknown
                    Expr: 1
                    Offset: 0, Size: 4
                    Type: Unsigned
                    Validation: Any
                    Formula: None
                    Inner expression:
                        ExprLiteralInt: 1
                            Location: t/40-syntax/input/dq_01.asm:3:4
                            Value type: Unknown
                            Expr: 1
                Patch
                    Location: t/40-syntax/input/dq_01.asm:3:6
                    Value type: Unknown
                    Expr: 2
                    Offset: 4, Size: 4
                    Type: Unsigned
                    Validation: Any
                    Formula: None
                    Inner expression:
                        ExprLiteralInt: 2
                            Location: t/40-syntax/input/dq_01.asm:3:6
                            Value type: Unknown
                            Expr: 2
                Patch
                    Location: t/40-syntax/input/dq_01.asm:3:8
                    Value type: Unknown
                    Expr: 3
                    Offset: 8, Size: 4
                    Type: Unsigned
                    Validation: Any
                    Formula: None
                    Inner expression:
                        ExprLiteralInt: 3
                            Location: t/40-syntax/input/dq_01.asm:3:8
                            Value type: Unknown
                            Expr: 3
                Patch
                    Location: t/40-syntax/input/dq_01.asm:3:12
                    Value type: Unknown
                    Expr: 1+2*3
                    Offset: $0C, Size: 4
                    Type: Unsigned
                    Validation: Any
                    Formula: None
                    Inner expression:
                        ExprBinary: +
                            Location: t/40-syntax/input/dq_01.asm:3:12
                            Value type: Unknown
                            Expr: 1+2*3
                            LHS:
                                ExprLiteralInt: 1
                                    Location: t/40-syntax/input/dq_01.asm:3:10
                                    Value type: Unknown
                            RHS:
                                ExprBinary: *
                                    Location: t/40-syntax/input/dq_01.asm:3:14
                                    Value type: Unknown
                                    LHS:
                                        ExprLiteralInt: 2
                                            Location: t/40-syntax/input/dq_01.asm:3:12
                                            Value type: Unknown
                                    RHS:
                                        ExprLiteralInt: 3
                                            Location: t/40-syntax/input/dq_01.asm:3:14
                                            Value type: Unknown
